# datalens

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx-ssl.conf
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_sessions_and_conversations.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: __init__.py  graph.py  prompts.py  tools.py
backend/app/models/: __init__.py  conversation.py  database.py  schemas.py  session.py
backend/app/routes/: conversations.py  health.py  sessions.py  upload.py
backend/app/services/: minio_service.py  session_service.py  upload_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent.py  test_conversations.py  test_sessions.py  test_upload.py
backend/tests/unit/: test_agent_tools.py  test_checkpoint_repair.py  test_display_extraction.py  test_schemas.py  test_session_service.py  test_upload_service.py
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: mock-sse.ts  sample_data.csv
e2e/tests/: chat.spec.ts  upload.spec.ts  visualization.spec.ts
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: PasswordGate.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts  useFileUpload.ts
frontend/src/lib/: api.ts  displayExtractor.ts  (+2 more)
(+19 files in other folders)
